2006-11-20  Akim Demaille  <akim.demaille@gmail.com>

	Use svn-externals.mk
	* uobject.mk: .

2006-11-13  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uobject/urbi/uobject.hh.template: here.

2006-11-12  Jean-Christophe Baillie  <baillie@gostai.com>

	fix ticket #36, requesting explicit ::urbi:: namespace in macros. 
	* src/liburbi/uobject/urbi/uobject.hh.template: add urbi namespace in
        macros.

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	Fix EXTRA_DIST
	* uobject.mk: Use += for it.
	* uvalue-common.cc: Formatting changes.
	Spurious ; removal.

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	Find uobject.hh
	* uvalue-common.cc: Adjust.

2006-11-07  Akim Demaille  <akim.demaille@free.fr>

	Ship uvalue-common.cc
	* uobject.mk: For sake of distcheck.

2006-11-07  Akim Demaille  <demaille@gostai.com>

	svn sugars
	* uobject.mk (uobj-up, uobj-help, uobj-ci): New.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	uobject.hh
	* uobject.mk: Fix several mistakes.
	While we're at it, rename to uobject.hh.
	* uobject.template.h: Rename as...
	* uobject.hh.template: this.
	* uvalue-common.cc: Adjust.
