@@ -1,3 +1,8 @@
+2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Properly initialize all fields of USound.
+	* uvalue-common.cc (UValue::operator USound() const): Here.
+
 2006-11-20  Akim Demaille  <akim.demaille@gmail.com>
 
 	Use svn-externals.mk
